# WatersMzMLTool

./: BUILD.md  README.md  calibration_series_leuenk_glufib_fragment.txt  pyproject.toml  requirements.txt  waters_mzml_tools.py
hooks/: hook_.py
src/: calibration.py  calibration_funcs.py  calibration_utils.py  file_utils.py  gui_mode.py  ms_utils.py  qt_worker.py  waters_utils.py
src/gui/: main_window_layout.py  main_window_layout.ui
tests/: conftest.py  test_cli.py  test_waters_utils.py
