[project]
name = "watersmzmltool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "molmass==2025.4.14",
    "numpy==2.2.5",
    "pyopenms==3.3.0",
    "pyqt5==5.15.11",
    "pyqtgraph==0.13.7",
    "pytest>=8.4.2",
    "scipy==1.15.2",
]
